# sample-ntex-rust-webpi

./: .env  .env.prod  Cargo.toml  Dockerfile  README.md
src/: error.rs  main.rs
src/controller/: admin_controller.rs  auth_controller.rs  file_controller.rs  mod.rs  role_controller.rs  root_controller.rs  user_controller.rs
src/entity/: address.rs  address_type.rs  gender.rs  mod.rs
src/query/: role.rs
src/service/: file.rs  role.rs
src/utils/: jwt.rs  mod.rs  swagger_docs.rs
